kubernetes/apps/media-server/dispatcharr/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dispatcharr
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - dispatcharr.${DOMAIN}
  rules:
    - backendRefs:
        - name: dispatcharr
          namespace: media-server
          port: 9191
